--- a/package.json
+++ b/package.json
@@ -9,17 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.134",
+    "@mui/material": "^5.13.5",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "20.3.1",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
-    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "js-cookie": "^3.0.5",
     "next": "13.4.6",
-    "postcss": "8.4.24",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
+    "react-query": "^3.39.3",
+    "tailwindcss-inner-border": "^0.2.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
